# lynx

./: .gitignore  Makefile  README.md  changelog.md  cleanup-ports.sh  docker-compose.yml  lynx-aliases.sh  lynx.sh  points.csv
.github/: copilot-instructions.md
core/: CMakeLists.txt  bruteforce_index.cpp  bruteforce_index.h  main.cpp  search.cpp  search.h
core/bindings/go/: Dockerfile  Makefile  go.mod  go.sum  setup.go
core/bindings/go/cmd/api/: api.go  embeddings.go  geo_indexed_areas.go  handlers.go  indexing_jobs.go  main.go  models.go  router.go  semantic_geo_index_ws.go  semantic_geo_search.go
core/bindings/go/data_store/: binary_file_structure.md  vector_cache.go
core/bindings/go/lynx/: bruteforce.go  hnsw_index.go  in_memory_vector_store.go  ivf_index.go  ivf_pq_index.go  lynx_test.go  types.go
core/bindings/go/metrics/: metrics.go
core/bindings/go/storage/: geo_store.go  postgres_store.go
core/bindings/go/wrapper/: CMakeLists.txt  bruteforce_index_wrapper.cpp  bruteforce_index_wrapper.h  hnsw_index_wrapper.cpp  hnsw_index_wrapper.h  in_memory_vector_store_wrapper.cpp  in_memory_vector_store_wrapper.h  ivf_index_wrapper.cpp  ivf_index_wrapper.h  ivf_pq_index_wrapper.cpp  ivf_pq_index_wrapper.h
core/bindings/python/: lynx_bindings.cpp  setup.py
core/include/lynx/: bruteforce_index.h  hnsw_index.h  in_memory_vector_store.h  index_factory.h  index_loader.h  index_registry.h  ivf_index.h  ivf_pq_index.h  serialization.h  vector_index.h  vector_store.h
core/include/lynx/utils/: file_utils.h  kmeans.h  logging.h  math.h  metric.h
core/src/: bruteforce_index.cpp  hnsw_index.cpp  in_memory_vector_store.cpp  index_loader.cpp  index_registry.cpp  ivf_index.cpp  ivf_pq_index.cpp  main.cpp  serialization.cpp
core/src/utils/: logging.cpp  metric.cpp
core/src/utils/k_means/: __main__.cpp  kmeans.cpp
core/tests/: CMakeLists.txt  test_bindings.py  test_bruteforce.cpp  test_ivf.cpp  test_ivf_pq.cpp  test_serialization.cpp  test_utils.cpp  test_vector_store.cpp  testing_test.cpp
embeddings/: Dockerfile  api.py  embed.py  requirements  requirements.txt  setup.py
examples/: basic_usage.py  embed_demo.py  end_to_end_demo.py
frontend/lynx-frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/lynx-frontend/src/: App.tsx  index.css
frontend/lynx-frontend/src/features/: ActiveIndexingJobsPanel.tsx  BenchmarkSection.tsx  IndexStatusPanel.tsx  InfoScreen.tsx  MainScreen.tsx  MasterControlTerminal.tsx  UploadSection.tsx  VectorCacheSection.tsx
frontend/lynx-frontend/src/features/results/: ResultColumn.tsx
frontend/lynx-frontend/src/types/: types.ts
frontend/lynx-frontend/src/utils/: timeEstimation.ts
init-db/: 01-init.sql
init-db-geo/: 01-init.sql
